# noise-cancellation

./: .gitignore  CLAUDE.md  FINE_TUNING_GUIDE.md  README.md  RESEARCH.md  init_git.sh  noise_reducer.py  pyproject.toml  requirements.txt  test_noise_reducer.py
.claude/: settings.local.json
