[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-reduction-system"
version = "1.0.0"
description = "Real-time noise reduction system for voice calls"
readme = "README.md"
authors = [
    {name = "UKTI Voice Platform Team", email = "dev@ukti.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.8"
dependencies = [
    "noisereduce>=3.0.3",
    "pedalboard>=0.9.17",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "soundfile>=0.13.1",
    "matplotlib>=3.9.4",
    "librosa>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/noise-reduction-system"
Repository = "https://github.com/your-org/noise-reduction-system"
Documentation = "https://github.com/your-org/noise-reduction-system#readme"
Issues = "https://github.com/your-org/noise-reduction-system/issues"

[project.scripts]
noise-test = "test_noise_reducer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["noise_reducer*", "test_noise_reducer*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]